discussion/kv_engine/185317/185317_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

VBucketFilter::split should not create empty filter objects

Because an empty VBucketFilter matches everything, which doesn't make
much sense if the aim is to create N non-overlapping subsets from a set
of M vBuckets.

Also removed some unused methods which were broken in similar ways and
moved the tests to a more appropriate location.

Change-Id: I7491bb08bccf09bf18c14cbf3608ff657d2ce40d

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2023-02-27 13:44:08.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-02-27 15:38:39.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22796/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:42:30: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
        EXPECT_THAT(filters, SizeIs(1));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:50:30: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
        EXPECT_THAT(filters, SizeIs(4));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:52:40: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
            EXPECT_THAT(filters.at(i), SizeIs(1));
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:62:30: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
        EXPECT_THAT(filters, SizeIs(4));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:64:40: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
            EXPECT_THAT(filters.at(i), SizeIs(1));
                                       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:73:30: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
        EXPECT_THAT(filters, SizeIs(3));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:76:36: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
        EXPECT_THAT(filters.at(0), SizeIs(2));
                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:81:40: error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
            EXPECT_THAT(filters.at(i), SizeIs(1));
                                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22796/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:42:30:
error: use of undeclared identifier "SizeIs" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22796/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52231/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7915704) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52231/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12527/ : FAILURE

Compile error at [2023-02-27T14:58:48.593Z] ../kv_engine/engines/ep/tests/module_tests/vb_filter_test.cc:42:30:
error: use of undeclared identifier "SizeIs"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12527/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24424/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7948440) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24424/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1588/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7915672) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1588/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1588/ )

Test exceeded the timeout:
[2023-02-27T15:00:04.093Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1588/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24857/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7915672) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24857/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24857/ )

Test exceeded the timeout:
[2023-02-27T15:02:21.593Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24857/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25306/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7915672) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25306/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25306/ )

Test exceeded the timeout:
[2023-02-27T15:10:40.495Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25306/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26165/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7911817) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26165/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33272/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7911815) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33272/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33272/ )

Test exceeded the timeout:
[2023-02-27T15:14:52.981Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33272/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12606/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [155/156]: test bucket quota reduction...Exceeded maximum wait time of 60000000us waiting for stat "mem_used" to be below 4456448 (last value:7953488) - aborting.
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12606/ )

Test exceeded the timeout:
[2023-02-27T14:10:15.463Z] /usr/bin/timeout: the monitored command dumped core ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12606/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43814/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22997/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
